# pros_car

./: .dockerignore  .env  .env.template  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  LICENSE  README.md  car_control.bat  car_control.sh  car_control_2.sh  car_control_4.bat  car_control_4.sh  car_control_4_pc.sh  car_control_9090.bat  car_control_for_docker_compose.sh  docker-compose.yml  docker-compose_car_control.yml  mediapipe.sh  requirements.txt  ros_entrypoint.bash
.devcontainer/: devcontainer.json.template
.github/workflows/: docker_publish_ghcr.yaml
scripts/: build.bash  build_and_run.bash  create_from_boilerplate.bash  docker_build_and_push.bash  docker_build_and_run.bash  docker_buildx.bash
src/image_pkg/: package.xml  setup.cfg  setup.py
src/image_pkg/image_pkg/: image_to_topic_16bit.py  image_to_topic_8bit.py
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: publish_node.py  subscribe_node.py
src/pros_car_py/: package.xml  setup.cfg  setup.py
src/pros_car_py/kmeans_models/: kmeans_centers.npy
src/pros_car_py/launch/: carA_driver.launch.py  carA_random.launch copy.py  carA_random.launch.py
src/pros_car_py/meshes/: base_link.prefab  base_link.stl  base_link2_v2_1.prefab  base_link2_v2_1.stl  base_link2_v2_1_0.asset  base_link2_v2_1_1.asset  base_link2_v2_1_2.asset  base_link2_v2_1_3.asset  base_link2_v2_1_4.asset  (+68 more)
src/robot_description/: package.xml  setup.py
src/udp_exr_gpu/: CMakeLists.txt  package.xml
src/udp_exr_gpu/src/: base64_utils.hpp  udp_depth_exr_gpu_node.cpp
src/unity_lidar_transformer/: package.xml  setup.cfg  setup.py
(+69 files in other folders)
