<?xml version="1.0"?>
<package format="3">
  <name>udp_exr_gpu</name>
  <version>0.0.0</version>
  <description>UDP Depth EXR GPU example</description>
  <maintainer email="alianlbj23@gmail.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 相關依賴 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>openexr</depend>
  <depend>nlohmann_json</depend>
  <!-- 使用 OpenEXR -->
  <exec_depend>libopenexr-dev</exec_depend>
  <!-- 以上在 Debian/Ubuntu 可安裝: sudo apt-get install libopenexr-dev -->

  <!-- 如果要使用 CUDA, 需在系統安裝 CUDA Toolkit (例如 sudo apt-get install nvidia-cuda-toolkit) -->
</package>
